--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ aug23.json
 aug23unshifted.json
 2019-09-03T02_44_46Z_rainbowagents_data.json.gz
 cardDf.csv
+.ipynb_checkpoints/manasa-checkpoint.ipynb
+manasa.ipynb
